--- a/Tracking-QA/src/main/resources/iqiyi.conf
+++ b/Tracking-QA/src/main/resources/iqiyi.conf
@@ -1,12 +1,6 @@
 iqiyi {
   //beta
-//  url = "http://114.80.90.115:9001/iqiyi/bidrequest" //new engine
- // url = "http://114.80.90.115:9003/iqiyi/bidrequest" //old engine
-  url = "http://ad.madserving.com/client/bidrequest"
-  //33.130 不在集群中
-//  url = "http://114.80.90.115:56789/iqiyi/bidrequest"
-  //正式集群
-//  url = "http://sohu.otv.madserving.com/iqiyi/bidrequest"
+  url = "http://114.80.90.115:9002/iqiyi/bidrequest" //new engine
   request {
     id = "abc123"
     user {
@@ -28,7 +22,7 @@ iqiyi {
     }
     impression = [{
       id = "0"
-      campaign_id = 1000001
+      campaign_id = 147852
       video {
         ad_zone_id = 1000000000381
         ad_type = 1
