--- a/Tracking-QA/pom.xml
+++ b/Tracking-QA/pom.xml
@@ -94,6 +94,18 @@
 		    <artifactId>javax.servlet-api</artifactId>
 		    <version>4.0.0-b01</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.2.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 
 
     </dependencies>
@@ -199,6 +211,16 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <!-- 修改webapp目录为WebContent -->  
+			<plugin>  
+			    <groupId>org.apache.maven.plugins</groupId>  
+			    <artifactId>maven-war-plugin</artifactId>  
+			    <configuration>  
+			        <!-- 设置WebContent目录为Web目录 -->  
+			        <webappDirectory>WebContent</webappDirectory>  
+			        <warSourceDirectory>WebContent</warSourceDirectory>  
+			    </configuration>  
+			</plugin>  
 
         </plugins>
     </build>
